# deal_codes

./: .gitignore  plot_deal_ii_results.m
bug_tests/check_mesh/complex/: CMakeLists.txt
bug_tests/check_mesh/laplace/: CMakeLists.txt
bug_tests/check_mesh/mesh/: cube1.cub  cube1.ucd  cube_in_cube1.cub  cylinder.inp  cylinder.ucd
bug_tests/check_mesh/real/: CMakeLists.txt
bug_tests/check_namespace/: CMakeLists.txt  check_namespace.cc
bug_tests/check_nedelec_real_and_complex/complex/: CMakeLists.txt
bug_tests/check_nedelec_real_and_complex/real/: CMakeLists.txt
bug_tests/to_post/fened/: CMakeLists.txt
bug_tests/to_post/fesys/: CMakeLists.txt
bug_tests/to_post/geometry/: CMakeLists.txt  check_nedelec_parallelepiped.cc  check_nedelec_parallelepiped_inhom_neumann.cc  check_nedelec_parallelepiped_linear.cc
bug_tests/wave_prop/: results.txt  temp_data.m
bug_tests/wave_prop/src/: wave_propagation.cc
examples/maxwell/: 2014_03_09_maxwell_petsc.cc  CMakeLists.txt  maxwell_lshape  maxwell_lshape.cc  maxwell_petsc  testBC
examples/maxwell/backups/: maxwell.cc  (+3 more)
examples/poisson/: CMakeLists.txt  poisson  poisson.cc  refinement
serial/dipole_source/: CMakeLists.txt  run_conv_tests.sh
serial/dipole_source/results/: first_try_output.txt  plot_dipole_uniform_vs_graded.m  uniform_output.txt
serial/dipole_source/src/: dipole_source.cc
serial/eddy_current/: CMakeLists.txt
serial/maxwell/: CMakeLists.txt  maxwell.cc  p_ref.txt
serial/quick_test/: CMakeLists.txt
serial/test_basis/: CMakeLists.txt
serial/wave_propagation/: CMakeLists.txt  results.txt
(+56 files in other folders)
